# camera_calibrator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt  readme.md  setup.py
.github/workflows/: main.yml
cmake/: conan_config.cmake  output_paths.cmake
python/calibrator_helper/: readme.md  requirements.txt  setup.py
python/calibrator_helper/src/calibrator_helper/: calibration_helpers.py  cam_calibration.py  gui_helpers.py  origin_updater.py  system_calibration.py
python/misc/: check_inv.py
script/: solve_plane.py
src/: CMakeLists.txt  binds.cpp  calibrator.cpp  calibrator.hh  circular_buffer.hh  convert.hh  corners.cpp  corners.hh  data_generator.cpp  data_generator.hh  extrinsics_calibrator.cpp  extrinsics_calibrator.hh  geometry.cpp  geometry.hh  gui.cpp  gui.hh  log_image.cpp  log_image.hh  log_plot.cpp  log_plot.hh  main_gui.cpp  scene.cpp  scene.hh  test_calibrator.cpp  test_common.cpp  test_extrinsics_calibrator.cpp  test_geometry.cpp  types.hh
